y.output
Terminals unused in grammar

    KW_WHILE
    TOKEN_ERROR


Rules useless in parser due to conflicts

   53 EXPRESSION_LIST: ε


State 21 conflicts: 7 shift/reduce, 3 reduce/reduce
State 41 conflicts: 7 shift/reduce, 3 reduce/reduce
State 42 conflicts: 6 shift/reduce
State 46 conflicts: 19 shift/reduce, 3 reduce/reduce
State 49 conflicts: 1 shift/reduce
State 69 conflicts: 6 shift/reduce
State 70 conflicts: 6 shift/reduce
State 71 conflicts: 6 shift/reduce
State 72 conflicts: 6 shift/reduce
State 73 conflicts: 6 shift/reduce
State 74 conflicts: 6 shift/reduce
State 75 conflicts: 6 shift/reduce
State 76 conflicts: 6 shift/reduce
State 77 conflicts: 6 shift/reduce
State 78 conflicts: 6 shift/reduce
State 79 conflicts: 6 shift/reduce
State 80 conflicts: 6 shift/reduce
State 82 conflicts: 6 shift/reduce, 1 reduce/reduce
State 105 conflicts: 18 shift/reduce, 1 reduce/reduce
State 111 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: GLOBAL_DEFINITION_LIST

    2 GLOBAL_DEFINITION_LIST: GLOBAL_DEFINITION GLOBAL_DEFINITION_LIST
    3                       | ε

    4 GLOBAL_DEFINITION: FUNCTION_DEFINITION
    5                  | VARIABLE_DEFINITION

    6 FUNCTION_DEFINITION: FUNCTION_HEADER COMMAND_BLOCK

    7 FUNCTION_HEADER: TYPE_KEYWORD IDENTIFIER '(' PARAMETER_LIST ')'

    8 PARAMETER_LIST: PARAMETER PARAMETER_LIST
    9               | ε

   10 PARAMETER: TYPE_KEYWORD IDENTIFIER

   11 COMMAND_BLOCK: '{' COMMAND_LIST '}'

   12 COMMAND_LIST: COMMAND ';' COMMAND_LIST
   13             | COMMAND

   14 COMMAND: COMMAND_BLOCK
   15        | ASSIGNMENT_COMMAND
   16        | READ_COMMAND
   17        | RETURN_COMMAND
   18        | PRINT_COMMAND
   19        | IF_COMMAND
   20        | IF_ELSE_COMMAND
   21        | ε

   22 ASSIGNMENT_COMMAND: VARIABLE_IDENTIFIER ASSIGNMENT EXPRESSION

   23 READ_COMMAND: KW_READ VARIABLE_IDENTIFIER

   24 RETURN_COMMAND: KW_RETURN EXPRESSION

   25 PRINT_COMMAND: KW_PRINT PRINTABLE_ELEMENT_LIST

   26 PRINTABLE_ELEMENT_LIST: LIT_STRING PRINTABLE_ELEMENT_LIST
   27                       | EXPRESSION PRINTABLE_ELEMENT_LIST
   28                       | ε

   29 IF_COMMAND: KW_IF '(' EXPRESSION ')' COMMAND

   30 IF_ELSE_COMMAND: KW_IF '(' EXPRESSION ')' COMMAND KW_ELSE COMMAND

   31 EXPRESSION_TERM: VARIABLE_IDENTIFIER
   32                | LIT_INTEGER
   33                | LIT_FLOAT
   34                | LIT_CHAR

   35 EXPRESSION: EXPRESSION_TERM
   36           | '(' EXPRESSION ')'
   37           | EXPRESSION '+' EXPRESSION
   38           | EXPRESSION '-' EXPRESSION
   39           | EXPRESSION '.' EXPRESSION
   40           | EXPRESSION '/' EXPRESSION
   41           | EXPRESSION '<' EXPRESSION
   42           | EXPRESSION '>' EXPRESSION
   43           | EXPRESSION '&' EXPRESSION
   44           | EXPRESSION '|' EXPRESSION
   45           | '~' EXPRESSION
   46           | EXPRESSION OPERATOR_LE EXPRESSION
   47           | EXPRESSION OPERATOR_GE EXPRESSION
   48           | EXPRESSION OPERATOR_EQ EXPRESSION
   49           | EXPRESSION OPERATOR_DIF EXPRESSION
   50           | FUNCTION_CALL
   51           | ε

   52 EXPRESSION_LIST: EXPRESSION EXPRESSION_LIST
   53                | ε

   54 FUNCTION_CALL: IDENTIFIER '(' EXPRESSION_LIST ')'

   55 VARIABLE_DEFINITION: SINGLE_VARIABLE_DECLARATION
   56                    | ARRAY_DEFINITION

   57 SINGLE_VARIABLE_DECLARATION: TYPE_KEYWORD IDENTIFIER '(' LITERAL_VALUE ')' ';'

   58 ARRAY_DEFINITION: TYPE_KEYWORD IDENTIFIER '[' ARRAY_SIZE_VALUE ']' LITERAL_VALUE_LIST ';'

   59 ARRAY_SIZE_VALUE: LIT_INTEGER

   60 VARIABLE_IDENTIFIER: IDENTIFIER
   61                    | IDENTIFIER '[' EXPRESSION ']'

   62 IDENTIFIER: TK_IDENTIFIER

   63 TYPE_KEYWORD: KW_CHAR
   64             | KW_INT
   65             | KW_FLOAT

   66 LITERAL_VALUE_LIST: LITERAL_VALUE LITERAL_VALUE_LIST
   67                   | ε

   68 LITERAL_VALUE: LIT_INTEGER
   69              | LIT_FLOAT
   70              | LIT_CHAR
   71              | LIT_STRING


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 43
    '(' (40) 7 29 30 36 54 57
    ')' (41) 7 29 30 36 54 57
    '+' (43) 37
    '-' (45) 38
    '.' (46) 39
    '/' (47) 40
    ';' (59) 12 57 58
    '<' (60) 41
    '>' (62) 42
    '[' (91) 58 61
    ']' (93) 58 61
    '{' (123) 11
    '|' (124) 44
    '}' (125) 11
    '~' (126) 45
    error (256)
    KW_CHAR (258) 63
    KW_INT (259) 64
    KW_FLOAT (260) 65
    KW_IF (261) 29 30
    KW_ELSE (262) 30
    KW_WHILE (263)
    KW_READ (264) 23
    KW_PRINT (265) 25
    KW_RETURN (266) 24
    ASSIGNMENT (267) 22
    OPERATOR_LE (268) 46
    OPERATOR_GE (269) 47
    OPERATOR_EQ (270) 48
    OPERATOR_DIF (271) 49
    TK_IDENTIFIER (272) 62
    LIT_INTEGER (273) 32 59 68
    LIT_FLOAT (274) 33 69
    LIT_CHAR (275) 34 70
    LIT_STRING (276) 26 71
    TOKEN_ERROR (277)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    PROGRAM (40)
        on left: 1
        on right: 0
    GLOBAL_DEFINITION_LIST (41)
        on left: 2 3
        on right: 1 2
    GLOBAL_DEFINITION (42)
        on left: 4 5
        on right: 2
    FUNCTION_DEFINITION (43)
        on left: 6
        on right: 4
    FUNCTION_HEADER (44)
        on left: 7
        on right: 6
    PARAMETER_LIST (45)
        on left: 8 9
        on right: 7 8
    PARAMETER (46)
        on left: 10
        on right: 8
    COMMAND_BLOCK (47)
        on left: 11
        on right: 6 14
    COMMAND_LIST (48)
        on left: 12 13
        on right: 11 12
    COMMAND (49)
        on left: 14 15 16 17 18 19 20 21
        on right: 12 13 29 30
    ASSIGNMENT_COMMAND (50)
        on left: 22
        on right: 15
    READ_COMMAND (51)
        on left: 23
        on right: 16
    RETURN_COMMAND (52)
        on left: 24
        on right: 17
    PRINT_COMMAND (53)
        on left: 25
        on right: 18
    PRINTABLE_ELEMENT_LIST (54)
        on left: 26 27 28
        on right: 25 26 27
    IF_COMMAND (55)
        on left: 29
        on right: 19
    IF_ELSE_COMMAND (56)
        on left: 30
        on right: 20
    EXPRESSION_TERM (57)
        on left: 31 32 33 34
        on right: 35
    EXPRESSION (58)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 22 24 27 29 30 36 37 38 39 40 41 42 43 44 45 46 47 48 49 52 61
    EXPRESSION_LIST (59)
        on left: 52 53
        on right: 52 54
    FUNCTION_CALL (60)
        on left: 54
        on right: 50
    VARIABLE_DEFINITION (61)
        on left: 55 56
        on right: 5
    SINGLE_VARIABLE_DECLARATION (62)
        on left: 57
        on right: 55
    ARRAY_DEFINITION (63)
        on left: 58
        on right: 56
    ARRAY_SIZE_VALUE (64)
        on left: 59
        on right: 58
    VARIABLE_IDENTIFIER (65)
        on left: 60 61
        on right: 22 23 31
    IDENTIFIER (66)
        on left: 62
        on right: 7 10 54 57 58 60 61
    TYPE_KEYWORD (67)
        on left: 63 64 65
        on right: 7 10 57 58
    LITERAL_VALUE_LIST (68)
        on left: 66 67
        on right: 58 66
    LITERAL_VALUE (69)
        on left: 68 69 70 71
        on right: 57 66


State 0

    0 $accept: • PROGRAM $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (GLOBAL_DEFINITION_LIST)

    PROGRAM                      go to state 4
    GLOBAL_DEFINITION_LIST       go to state 5
    GLOBAL_DEFINITION            go to state 6
    FUNCTION_DEFINITION          go to state 7
    FUNCTION_HEADER              go to state 8
    VARIABLE_DEFINITION          go to state 9
    SINGLE_VARIABLE_DECLARATION  go to state 10
    ARRAY_DEFINITION             go to state 11
    TYPE_KEYWORD                 go to state 12


State 1

   63 TYPE_KEYWORD: KW_CHAR •

    $default  reduce using rule 63 (TYPE_KEYWORD)


State 2

   64 TYPE_KEYWORD: KW_INT •

    $default  reduce using rule 64 (TYPE_KEYWORD)


State 3

   65 TYPE_KEYWORD: KW_FLOAT •

    $default  reduce using rule 65 (TYPE_KEYWORD)


State 4

    0 $accept: PROGRAM • $end

    $end  shift, and go to state 13


State 5

    1 PROGRAM: GLOBAL_DEFINITION_LIST •

    $default  reduce using rule 1 (PROGRAM)


State 6

    2 GLOBAL_DEFINITION_LIST: GLOBAL_DEFINITION • GLOBAL_DEFINITION_LIST

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (GLOBAL_DEFINITION_LIST)

    GLOBAL_DEFINITION_LIST       go to state 14
    GLOBAL_DEFINITION            go to state 6
    FUNCTION_DEFINITION          go to state 7
    FUNCTION_HEADER              go to state 8
    VARIABLE_DEFINITION          go to state 9
    SINGLE_VARIABLE_DECLARATION  go to state 10
    ARRAY_DEFINITION             go to state 11
    TYPE_KEYWORD                 go to state 12


State 7

    4 GLOBAL_DEFINITION: FUNCTION_DEFINITION •

    $default  reduce using rule 4 (GLOBAL_DEFINITION)


State 8

    6 FUNCTION_DEFINITION: FUNCTION_HEADER • COMMAND_BLOCK

    '{'  shift, and go to state 15

    COMMAND_BLOCK  go to state 16


State 9

    5 GLOBAL_DEFINITION: VARIABLE_DEFINITION •

    $default  reduce using rule 5 (GLOBAL_DEFINITION)


State 10

   55 VARIABLE_DEFINITION: SINGLE_VARIABLE_DECLARATION •

    $default  reduce using rule 55 (VARIABLE_DEFINITION)


State 11

   56 VARIABLE_DEFINITION: ARRAY_DEFINITION •

    $default  reduce using rule 56 (VARIABLE_DEFINITION)


State 12

    7 FUNCTION_HEADER: TYPE_KEYWORD • IDENTIFIER '(' PARAMETER_LIST ')'
   57 SINGLE_VARIABLE_DECLARATION: TYPE_KEYWORD • IDENTIFIER '(' LITERAL_VALUE ')' ';'
   58 ARRAY_DEFINITION: TYPE_KEYWORD • IDENTIFIER '[' ARRAY_SIZE_VALUE ']' LITERAL_VALUE_LIST ';'

    TK_IDENTIFIER  shift, and go to state 17

    IDENTIFIER  go to state 18


State 13

    0 $accept: PROGRAM $end •

    $default  accept


State 14

    2 GLOBAL_DEFINITION_LIST: GLOBAL_DEFINITION GLOBAL_DEFINITION_LIST •

    $default  reduce using rule 2 (GLOBAL_DEFINITION_LIST)


State 15

   11 COMMAND_BLOCK: '{' • COMMAND_LIST '}'

    KW_IF          shift, and go to state 19
    KW_READ        shift, and go to state 20
    KW_PRINT       shift, and go to state 21
    KW_RETURN      shift, and go to state 22
    TK_IDENTIFIER  shift, and go to state 17
    '{'            shift, and go to state 15

    $default  reduce using rule 21 (COMMAND)

    COMMAND_BLOCK        go to state 23
    COMMAND_LIST         go to state 24
    COMMAND              go to state 25
    ASSIGNMENT_COMMAND   go to state 26
    READ_COMMAND         go to state 27
    RETURN_COMMAND       go to state 28
    PRINT_COMMAND        go to state 29
    IF_COMMAND           go to state 30
    IF_ELSE_COMMAND      go to state 31
    VARIABLE_IDENTIFIER  go to state 32
    IDENTIFIER           go to state 33


State 16

    6 FUNCTION_DEFINITION: FUNCTION_HEADER COMMAND_BLOCK •

    $default  reduce using rule 6 (FUNCTION_DEFINITION)


State 17

   62 IDENTIFIER: TK_IDENTIFIER •

    $default  reduce using rule 62 (IDENTIFIER)


State 18

    7 FUNCTION_HEADER: TYPE_KEYWORD IDENTIFIER • '(' PARAMETER_LIST ')'
   57 SINGLE_VARIABLE_DECLARATION: TYPE_KEYWORD IDENTIFIER • '(' LITERAL_VALUE ')' ';'
   58 ARRAY_DEFINITION: TYPE_KEYWORD IDENTIFIER • '[' ARRAY_SIZE_VALUE ']' LITERAL_VALUE_LIST ';'

    '('  shift, and go to state 34
    '['  shift, and go to state 35


State 19

   29 IF_COMMAND: KW_IF • '(' EXPRESSION ')' COMMAND
   30 IF_ELSE_COMMAND: KW_IF • '(' EXPRESSION ')' COMMAND KW_ELSE COMMAND

    '('  shift, and go to state 36


State 20

   23 READ_COMMAND: KW_READ • VARIABLE_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 17

    VARIABLE_IDENTIFIER  go to state 37
    IDENTIFIER           go to state 33


State 21

   25 PRINT_COMMAND: KW_PRINT • PRINTABLE_ELEMENT_LIST

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    LIT_STRING     shift, and go to state 41
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    KW_ELSE        reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    KW_ELSE        [reduce using rule 51 (EXPRESSION)]
    TK_IDENTIFIER  [reduce using rule 51 (EXPRESSION)]
    LIT_INTEGER    [reduce using rule 51 (EXPRESSION)]
    LIT_FLOAT      [reduce using rule 51 (EXPRESSION)]
    LIT_CHAR       [reduce using rule 51 (EXPRESSION)]
    LIT_STRING     [reduce using rule 51 (EXPRESSION)]
    '~'            [reduce using rule 51 (EXPRESSION)]
    '('            [reduce using rule 51 (EXPRESSION)]
    '}'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    '}'            [reduce using rule 51 (EXPRESSION)]
    ';'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    ';'            [reduce using rule 51 (EXPRESSION)]
    $default       reduce using rule 51 (EXPRESSION)

    PRINTABLE_ELEMENT_LIST  go to state 44
    EXPRESSION_TERM         go to state 45
    EXPRESSION              go to state 46
    FUNCTION_CALL           go to state 47
    VARIABLE_IDENTIFIER     go to state 48
    IDENTIFIER              go to state 49


State 22

   24 RETURN_COMMAND: KW_RETURN • EXPRESSION

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    $default  reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 50
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 23

   14 COMMAND: COMMAND_BLOCK •

    $default  reduce using rule 14 (COMMAND)


State 24

   11 COMMAND_BLOCK: '{' COMMAND_LIST • '}'

    '}'  shift, and go to state 51


State 25

   12 COMMAND_LIST: COMMAND • ';' COMMAND_LIST
   13             | COMMAND •

    ';'  shift, and go to state 52

    $default  reduce using rule 13 (COMMAND_LIST)


State 26

   15 COMMAND: ASSIGNMENT_COMMAND •

    $default  reduce using rule 15 (COMMAND)


State 27

   16 COMMAND: READ_COMMAND •

    $default  reduce using rule 16 (COMMAND)


State 28

   17 COMMAND: RETURN_COMMAND •

    $default  reduce using rule 17 (COMMAND)


State 29

   18 COMMAND: PRINT_COMMAND •

    $default  reduce using rule 18 (COMMAND)


State 30

   19 COMMAND: IF_COMMAND •

    $default  reduce using rule 19 (COMMAND)


State 31

   20 COMMAND: IF_ELSE_COMMAND •

    $default  reduce using rule 20 (COMMAND)


State 32

   22 ASSIGNMENT_COMMAND: VARIABLE_IDENTIFIER • ASSIGNMENT EXPRESSION

    ASSIGNMENT  shift, and go to state 53


State 33

   60 VARIABLE_IDENTIFIER: IDENTIFIER •
   61                    | IDENTIFIER • '[' EXPRESSION ']'

    '['  shift, and go to state 54

    $default  reduce using rule 60 (VARIABLE_IDENTIFIER)


State 34

    7 FUNCTION_HEADER: TYPE_KEYWORD IDENTIFIER '(' • PARAMETER_LIST ')'
   57 SINGLE_VARIABLE_DECLARATION: TYPE_KEYWORD IDENTIFIER '(' • LITERAL_VALUE ')' ';'

    KW_CHAR      shift, and go to state 1
    KW_INT       shift, and go to state 2
    KW_FLOAT     shift, and go to state 3
    LIT_INTEGER  shift, and go to state 55
    LIT_FLOAT    shift, and go to state 56
    LIT_CHAR     shift, and go to state 57
    LIT_STRING   shift, and go to state 58

    $default  reduce using rule 9 (PARAMETER_LIST)

    PARAMETER_LIST  go to state 59
    PARAMETER       go to state 60
    TYPE_KEYWORD    go to state 61
    LITERAL_VALUE   go to state 62


State 35

   58 ARRAY_DEFINITION: TYPE_KEYWORD IDENTIFIER '[' • ARRAY_SIZE_VALUE ']' LITERAL_VALUE_LIST ';'

    LIT_INTEGER  shift, and go to state 63

    ARRAY_SIZE_VALUE  go to state 64


State 36

   29 IF_COMMAND: KW_IF '(' • EXPRESSION ')' COMMAND
   30 IF_ELSE_COMMAND: KW_IF '(' • EXPRESSION ')' COMMAND KW_ELSE COMMAND

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    $default  reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 65
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 37

   23 READ_COMMAND: KW_READ VARIABLE_IDENTIFIER •

    $default  reduce using rule 23 (READ_COMMAND)


State 38

   32 EXPRESSION_TERM: LIT_INTEGER •

    $default  reduce using rule 32 (EXPRESSION_TERM)


State 39

   33 EXPRESSION_TERM: LIT_FLOAT •

    $default  reduce using rule 33 (EXPRESSION_TERM)


State 40

   34 EXPRESSION_TERM: LIT_CHAR •

    $default  reduce using rule 34 (EXPRESSION_TERM)


State 41

   26 PRINTABLE_ELEMENT_LIST: LIT_STRING • PRINTABLE_ELEMENT_LIST

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    LIT_STRING     shift, and go to state 41
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    KW_ELSE        reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    KW_ELSE        [reduce using rule 51 (EXPRESSION)]
    TK_IDENTIFIER  [reduce using rule 51 (EXPRESSION)]
    LIT_INTEGER    [reduce using rule 51 (EXPRESSION)]
    LIT_FLOAT      [reduce using rule 51 (EXPRESSION)]
    LIT_CHAR       [reduce using rule 51 (EXPRESSION)]
    LIT_STRING     [reduce using rule 51 (EXPRESSION)]
    '~'            [reduce using rule 51 (EXPRESSION)]
    '('            [reduce using rule 51 (EXPRESSION)]
    '}'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    '}'            [reduce using rule 51 (EXPRESSION)]
    ';'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    ';'            [reduce using rule 51 (EXPRESSION)]
    $default       reduce using rule 51 (EXPRESSION)

    PRINTABLE_ELEMENT_LIST  go to state 66
    EXPRESSION_TERM         go to state 45
    EXPRESSION              go to state 46
    FUNCTION_CALL           go to state 47
    VARIABLE_IDENTIFIER     go to state 48
    IDENTIFIER              go to state 49


State 42

   45 EXPRESSION: '~' • EXPRESSION

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    TK_IDENTIFIER  [reduce using rule 51 (EXPRESSION)]
    LIT_INTEGER    [reduce using rule 51 (EXPRESSION)]
    LIT_FLOAT      [reduce using rule 51 (EXPRESSION)]
    LIT_CHAR       [reduce using rule 51 (EXPRESSION)]
    '~'            [reduce using rule 51 (EXPRESSION)]
    '('            [reduce using rule 51 (EXPRESSION)]
    $default       reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 67
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 43

   36 EXPRESSION: '(' • EXPRESSION ')'

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    $default  reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 68
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 44

   25 PRINT_COMMAND: KW_PRINT PRINTABLE_ELEMENT_LIST •

    $default  reduce using rule 25 (PRINT_COMMAND)


State 45

   35 EXPRESSION: EXPRESSION_TERM •

    $default  reduce using rule 35 (EXPRESSION)


State 46

   27 PRINTABLE_ELEMENT_LIST: EXPRESSION • PRINTABLE_ELEMENT_LIST
   37 EXPRESSION: EXPRESSION • '+' EXPRESSION
   38           | EXPRESSION • '-' EXPRESSION
   39           | EXPRESSION • '.' EXPRESSION
   40           | EXPRESSION • '/' EXPRESSION
   41           | EXPRESSION • '<' EXPRESSION
   42           | EXPRESSION • '>' EXPRESSION
   43           | EXPRESSION • '&' EXPRESSION
   44           | EXPRESSION • '|' EXPRESSION
   46           | EXPRESSION • OPERATOR_LE EXPRESSION
   47           | EXPRESSION • OPERATOR_GE EXPRESSION
   48           | EXPRESSION • OPERATOR_EQ EXPRESSION
   49           | EXPRESSION • OPERATOR_DIF EXPRESSION

    OPERATOR_LE    shift, and go to state 69
    OPERATOR_GE    shift, and go to state 70
    OPERATOR_EQ    shift, and go to state 71
    OPERATOR_DIF   shift, and go to state 72
    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    LIT_STRING     shift, and go to state 41
    '|'            shift, and go to state 73
    '&'            shift, and go to state 74
    '<'            shift, and go to state 75
    '>'            shift, and go to state 76
    '+'            shift, and go to state 77
    '-'            shift, and go to state 78
    '.'            shift, and go to state 79
    '/'            shift, and go to state 80
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    KW_ELSE        reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    KW_ELSE        [reduce using rule 51 (EXPRESSION)]
    OPERATOR_LE    [reduce using rule 51 (EXPRESSION)]
    OPERATOR_GE    [reduce using rule 51 (EXPRESSION)]
    OPERATOR_EQ    [reduce using rule 51 (EXPRESSION)]
    OPERATOR_DIF   [reduce using rule 51 (EXPRESSION)]
    TK_IDENTIFIER  [reduce using rule 51 (EXPRESSION)]
    LIT_INTEGER    [reduce using rule 51 (EXPRESSION)]
    LIT_FLOAT      [reduce using rule 51 (EXPRESSION)]
    LIT_CHAR       [reduce using rule 51 (EXPRESSION)]
    LIT_STRING     [reduce using rule 51 (EXPRESSION)]
    '|'            [reduce using rule 51 (EXPRESSION)]
    '&'            [reduce using rule 51 (EXPRESSION)]
    '<'            [reduce using rule 51 (EXPRESSION)]
    '>'            [reduce using rule 51 (EXPRESSION)]
    '+'            [reduce using rule 51 (EXPRESSION)]
    '-'            [reduce using rule 51 (EXPRESSION)]
    '.'            [reduce using rule 51 (EXPRESSION)]
    '/'            [reduce using rule 51 (EXPRESSION)]
    '~'            [reduce using rule 51 (EXPRESSION)]
    '('            [reduce using rule 51 (EXPRESSION)]
    '}'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    '}'            [reduce using rule 51 (EXPRESSION)]
    ';'            reduce using rule 28 (PRINTABLE_ELEMENT_LIST)
    ';'            [reduce using rule 51 (EXPRESSION)]
    $default       reduce using rule 28 (PRINTABLE_ELEMENT_LIST)

    PRINTABLE_ELEMENT_LIST  go to state 81
    EXPRESSION_TERM         go to state 45
    EXPRESSION              go to state 46
    FUNCTION_CALL           go to state 47
    VARIABLE_IDENTIFIER     go to state 48
    IDENTIFIER              go to state 49


State 47

   50 EXPRESSION: FUNCTION_CALL •

    $default  reduce using rule 50 (EXPRESSION)


State 48

   31 EXPRESSION_TERM: VARIABLE_IDENTIFIER •

    $default  reduce using rule 31 (EXPRESSION_TERM)


State 49

   54 FUNCTION_CALL: IDENTIFIER • '(' EXPRESSION_LIST ')'
   60 VARIABLE_IDENTIFIER: IDENTIFIER •
   61                    | IDENTIFIER • '[' EXPRESSION ']'

    '('  shift, and go to state 82
    '['  shift, and go to state 54

    '('       [reduce using rule 60 (VARIABLE_IDENTIFIER)]
    $default  reduce using rule 60 (VARIABLE_IDENTIFIER)


State 50

   24 RETURN_COMMAND: KW_RETURN EXPRESSION •
   37 EXPRESSION: EXPRESSION • '+' EXPRESSION
   38           | EXPRESSION • '-' EXPRESSION
   39           | EXPRESSION • '.' EXPRESSION
   40           | EXPRESSION • '/' EXPRESSION
   41           | EXPRESSION • '<' EXPRESSION
   42           | EXPRESSION • '>' EXPRESSION
   43           | EXPRESSION • '&' EXPRESSION
   44           | EXPRESSION • '|' EXPRESSION
   46           | EXPRESSION • OPERATOR_LE EXPRESSION
   47           | EXPRESSION • OPERATOR_GE EXPRESSION
   48           | EXPRESSION • OPERATOR_EQ EXPRESSION
   49           | EXPRESSION • OPERATOR_DIF EXPRESSION

    OPERATOR_LE   shift, and go to state 69
    OPERATOR_GE   shift, and go to state 70
    OPERATOR_EQ   shift, and go to state 71
    OPERATOR_DIF  shift, and go to state 72
    '|'           shift, and go to state 73
    '&'           shift, and go to state 74
    '<'           shift, and go to state 75
    '>'           shift, and go to state 76
    '+'           shift, and go to state 77
    '-'           shift, and go to state 78
    '.'           shift, and go to state 79
    '/'           shift, and go to state 80

    $default  reduce using rule 24 (RETURN_COMMAND)


State 51

   11 COMMAND_BLOCK: '{' COMMAND_LIST '}' •

    $default  reduce using rule 11 (COMMAND_BLOCK)


State 52

   12 COMMAND_LIST: COMMAND ';' • COMMAND_LIST

    KW_IF          shift, and go to state 19
    KW_READ        shift, and go to state 20
    KW_PRINT       shift, and go to state 21
    KW_RETURN      shift, and go to state 22
    TK_IDENTIFIER  shift, and go to state 17
    '{'            shift, and go to state 15

    $default  reduce using rule 21 (COMMAND)

    COMMAND_BLOCK        go to state 23
    COMMAND_LIST         go to state 83
    COMMAND              go to state 25
    ASSIGNMENT_COMMAND   go to state 26
    READ_COMMAND         go to state 27
    RETURN_COMMAND       go to state 28
    PRINT_COMMAND        go to state 29
    IF_COMMAND           go to state 30
    IF_ELSE_COMMAND      go to state 31
    VARIABLE_IDENTIFIER  go to state 32
    IDENTIFIER           go to state 33


State 53

   22 ASSIGNMENT_COMMAND: VARIABLE_IDENTIFIER ASSIGNMENT • EXPRESSION

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    $default  reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 84
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 54

   61 VARIABLE_IDENTIFIER: IDENTIFIER '[' • EXPRESSION ']'

    TK_IDENTIFIER  shift, and go to state 17
    LIT_INTEGER    shift, and go to state 38
    LIT_FLOAT      shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '~'            shift, and go to state 42
    '('            shift, and go to state 43

    $default  reduce using rule 51 (EXPRESSION)

    EXPRESSION_TERM      go to state 45
    EXPRESSION           go to state 85
    FUNCTION_CALL        go to state 47
    VARIABLE_IDENTIFIER  go to state 48
    IDENTIFIER           go to state 49


State 55

   68 LITERAL_VALUE: LIT_INTEGER •

    $default  reduce using rule 68 (LITERAL_VALUE)


State 56

   69 LITERAL_VALUE: LIT_FLOAT •

    $default  reduce using rule 69 (LITERAL_VALUE)


State 57

   70 LITERAL_VALUE: LIT_CHAR •

    $default  reduce using rule 70 (LITERAL_VALUE)


State 58

   71 LITERAL_VALUE: LIT_STRING •

    $default  reduce using rule 71 (LITERAL_VALUE)


State 59

    7 FUNCTION_HEADER: TYPE_KEYWORD IDENTIFIER '(' PARAMETER_LIST • ')'

    ')'  shift, and go to state 86


State 60

    8 PARAMETER_LIST: PARAMETER • PARAMETER_LIST

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 9 (PARAMETER_LIST)

    PARAMETER_LIST  go to state 87
    PARAMETER       go to state 60
    TYPE_KEYWORD    go to state 61


State 61

   10 PARAMETER: TYPE_KEYWORD • IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 17

    IDENTIFIER  go to state 88


State 62

   57 SINGLE_VARIABLE_DECLARATION: TYPE_KEYWORD IDENTIFIER '(' LITERAL_VALUE • ')' ';'

    ')'  shift, and go to state 89


State 63

   59 ARRAY_SIZE_VALUE: LIT_INTEGER •

    $default  reduce using rule 59 (ARRAY_SIZE_VALUE)


State 64

   58 ARRAY_DEFINITION: TYPE_KEYWORD IDENTIFIER '[' ARRAY_SIZE_VALUE • ']' LITERAL_VALUE_LIST ';'

    ']'  shift, and go to state 90


State 65
